2015-08-18  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm, 
	tp/Texinfo/Convert/XSParagraph/Makefile.PL: remove letters
	from $VERSION, as it breaks loading of module.  Fix undefined variables.
	* tp/MANIFEST, tp/Makefile.PL, tp/Makefile.am, 
	tp/maintain/clean_perl_module_files.sh, 
	tp/maintain/prepare_perl_module_files.sh: update.  Do XSParagraph
	recursively.

2015-08-17  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/XSParagraph/MANIFEST, 
	Texinfo/Convert/XSParagraph/Makefile.PL, 
	Texinfo/Convert/XSParagraph/XSParagraph.pm,
	Texinfo/Convert/XSParagraph/t/XSParagraph.t: update stand-alone
	perl module code.  Remove unneeded or generated files.
	* tp/Texinfo/Convert/XSParagraph/Makefile.am,
	tp/Texinfo/Convert/XSParagraph/prepare_standalone_perl_module.sh:
	script that can be used to build a stand-alone module.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\scanmacro): Strip a trailing active newline 
	from the macro body if newlines are active.
	* doc/texinfo-tex-test.texi: Add example.
	
2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\macrobodyctxt): Make catcode of space 
	\other, so they are preserved when expanded in a context like 
	@example.
	(\parsemacbody, \parsermacbody): Terminate macro body at line 
	with space with catcode \other.
	(\macroargctxt, \defmacro): Update comments.
	* doc/texinfo-tex-test.texi: Add example.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add example with macro invocation 
	nested inside an argument.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add test file.
	* README-hacking: Mention to check texinfo-tex-test.texi.

2015-08-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\passargtomacro): New macro, to convert 
	doubled backslashes into single backslashes in macro argument.