@@ -1,9 +1,0 @@
-#!/usr/bin/env perl
-use strict;
-
-use Config;
-
-my $name = shift;
-print $Config{$name};
-
-
