@@ -1,3 +1,13 @@
+2015-08-18  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Convert/XSParagraph/configure.ac: Wipe Autoconf 
+	cache value for AC_PROG_CC.
+	* tp/Texinfo/Convert/XSParagraph/README: Remove done issue.
+	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Remove mention of 
+	fetch_conf.pl, and commented-out rules and variables.  
+	Distribute XSParagraph.xs.
+	* tp/Texinfo/Convert/XSParagraph/fetch_conf.pl: Delete.
+
 2015-08-18  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm, 
